--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "webpack serve --mode development",
     "build": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "clean": "rimraf dist"
+    "clean": "rimraf public/css public/js public/index.html",
+    "predeploy": "webpack --mode production",
+    "deploy": "gh-pages -d public"
   },
   "keywords": [
     "cv",
@@ -18,13 +20,15 @@
   "author": "Ben Boydens",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+    "@popperjs/core": "^2.11.8"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "html-webpack-plugin": "^5.5.3",
     "mini-css-extract-plugin": "^2.7.6",
     "rimraf": "^5.0.1",
